fixed picture being too big

--- a/src/Contents/ProjectPages/ParentProjectPages/ProjectPagesElements.module.css
+++ b/src/Contents/ProjectPages/ParentProjectPages/ProjectPagesElements.module.css
@@ -65,8 +65,10 @@
 }
 .ImgSecParent {
     border-radius: 0.5rem;
-    width: 100%;
     cursor: pointer;
+    max-height: 70vh;
+    object-fit: contain;
+    max-width: 100%;
   }
   
   .imageContainer {
